--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,16 @@ homepage:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.11.3+13
+  http: ^0.12.0
   flutter_webview_plugin: ^0.3.0+2
 
 dev_dependencies:
-  test: ^0.12.0
+  flutter_test:
+    sdk: flutter
+    
+environment:
+  sdk: ">=2.0.0-dev.28.0 <3.0.0"
+  flutter: ">=0.5.6 <2.0.0"    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
